force-app/main/default/objects/Laptop_deals__c.object
<CustomObject>
    <fields>
        <fullName>Model_Name__c</fullName>
        <label>Model Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vendor_Name__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Vendor Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Vendor_Details__c.Vendor_Country__c</field>
                <operation>equals</operation>
                <value>India</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Vendor_Details__c</referenceTo>
        <relationshipLabel>Laptop Deals</relationshipLabel>
        <relationshipName>Laptop_Deals</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Laptop Details</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>L-{00}</displayFormat>
        <label>Laptop Deal Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Laptop Deals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>